# poly_rust

./: .gitignore  CLAUDE.md  README.md  docker-compose.perf.yml  docker-compose.yml  plan_weather_bot.md
gamma_recorder/: .gitignore  Cargo.toml
gamma_recorder/doc/: plan_gamma_recorder_2026-07-15.md
gamma_recorder/scripts/: run_local.sh
gamma_recorder/src/: db.rs  gamma.rs  main.rs  updown_slots.rs
indicator/: Cargo.toml  Dockerfile
indicator/config/: indicator.toml
indicator/doc/: perf_indicator_docker_2026-07-18.md
indicator/src/: config.rs  engine.rs  lib.rs  main.rs  math.rs
price_feed/: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  run_collector.sh
price_feed/analysis/: latency_study.py
price_feed/doc/: BINANCE_RECORDER_PLAN.md  COLLECTOR_PLAN.md  data_ws_duplicates_2026-07-20.md  incident_collector_data_loss_2026-07-12.md  incident_collector_restart_2026-07-23.md  incident_data_quality_2026-07-22.md  plan_bba_feed_staleness_fix_2026-07-10.md  plan_bba_merge_ordering_fix_2026-07-16.md  plan_binance_ws_quality_2026-07-20.md  plan_resolution_recorder_2026-07-14.md
price_feed/scripts/: binance-stale-digest.service  binance-stale-digest.timer  binance_stale_digest.sh  data-quality-digest.service  data-quality-digest.timer  data_quality.py  data_quality_digest.sh  recover_live_tmp.py  recover_rust_parquet.py  restart_collector.sh  sync_oracle.sh  test_data_quality.py  test_data_quality_digest.sh  upgrade_collector.sh
price_feed/src/: chainlink.rs  collect.rs  main.rs  markets.rs  reconcile.rs  staleness.rs
siglab/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
siglab/config/: markets.toml  weather_cities.toml  worldcup_events.toml
siglab/doc/: feature_v_2026-07-17.md  incident_reversal_variant_correlated_timestamps_2026-07-14.md  incident_same_entry_ts_2026-07-14.md  incident_signal_2026-07-16.md  incident_ws_2026-07-13.md  local_resource_test_2026-07-13.md  plan_better_signal_2026-07-24.md  plan_weather_worldcup_trading_2026-07-13.md  study_reversal_high_low_2026-07-14.md
siglab/doc/report/: candidate_ledger.csv  signal_report_2026-07-13.md  signal_report_2026-07-14.md  signal_report_2026-07-14_AM.md  signal_report_2026-07-14_PM.md  signal_report_2026-07-15_AM.md  signal_report_2026-07-15_PM.md
siglab/scripts/: deploy_local.sh  install_timer.sh  push_report.sh  regenerate_reports.py
siglab/src/: bucket_reversal.rs  cgroup.rs  config.rs  event_monitor.rs  main.rs  market.rs  record.rs  report.rs  rotation.rs  snapshot.rs  staleness.rs  v_shape.rs  weather.rs  worldcup.rs
siglab/systemd/: siglab-daily-digest.service  siglab-daily-digest.timer  siglab-report-push.service  siglab-report-push.timer
trader/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  plan_rust_module.md
trader/config/: strategy_20260705.toml  strategy_20260708.toml  strategy_20260709.toml  strategy_20260713.toml  strategy_20260715.toml  strategy_20260716.toml  strategy_20260717.toml  strategy_20260719.toml  strategy_20260720_24h.toml  strategy_20260721_taker.toml  strategy_20260724.toml
trader/doc/: asbuilt_unwind_5u_maker_2026-07-19.md  audit_48hr_unwind_maker_2026-07-20.md  audit_data_2026-07-12.md  audit_recon_2026-07-15.md  audit_retry_doge_2026-07-03.md  audit_sl_no_trigger_2026-07-07.md  audit_trade_eth_2026-07-08.md  audit_trades_2026-07-03.md  audit_trades_2026-07-12.md  feature_bt_recon_2026-07-10.md  feature_new_markets_2026-07-17.md  feature_vol_2026-07-18.md  fix_config_test_drift_2026-07-15.md  fix_live_deploy_2026-07-15.md  incident_31_retry_sl_2026-07-07.md  incident_DOGE_wrong_result_2026-07-09.md  incident_bt_vs_live_discrepancy_2026-07-12.md  incident_btc_late_high_price_reversal_2026-07-16.md  incident_delta_pct_2026-07-12.md  incident_doge_2026-07-03.md  incident_eth_timeout_halt_gap_2026-07-14.md  incident_eth_trade_2026-07-21.md  incident_halt_double_count_2026-07-10.md  incident_halt_reset_2026-07-03.md  incident_missed_eth_2026-07-03.md  incident_missing_clob_latency_2026-07-06.md  incident_no_reset_notification_2026-07-08.md  incident_order_fail_2026-07-04.md  incident_order_rejection_2026-07-04.md  incident_paper_balance_drawdown_2026-07-21.md  incident_recon_btc_reversal_2026-07-15.md  incident_sol_unwind_but_loss_2026-07-06.md  incident_stale_oracle_config_2026-07-07.md  incident_tele_pnl_2026-07-04.md  incident_telegram_missing_stop_2026-07-06.md  incident_tp_latency_2026-07-16.md  incident_unable_to_resume_2026-07-15.md  incident_wrong_size_2026-07-21.md  incident_wrong_telegram_pnl_2026-07-16.md  latency_2026-07-04.md  (+22 more)
trader/results/daily_recon/: trade_recon_2026-07-02_to_2026-07-03.md  trade_recon_2026-07-03_to_2026-07-04.md  trade_recon_2026-07-04_to_2026-07-05.md  trade_recon_2026-07-05_to_2026-07-06.md  trade_recon_2026-07-06_to_2026-07-07.md  (+17 more)
trader/scripts/: build_backtest_prices.py  recon_paper_window.py  test_build_backtest_prices.py  test_gamma_reconcile.py  test_trade_reconcile.py  trade_reconcile.py
trader/src/: backtest.rs  balance.rs  config.rs  config_log.rs  execution.rs  gates.rs  indicator_store.rs  lib.rs  machine.rs  marketdata.rs  redemption.rs  strategies.rs  types.rs  unwind.rs  weather.rs  worker.rs
(+307 files in other folders)
