[package]
name = "indicator"
version = "0.1.0"
edition = "2024"

[lib]
name = "indicator"
path = "src/lib.rs"

[[bin]]
name = "indicator"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
async-nats = "0.49"
futures = "0.3"
rustls = { version = "0.23", features = ["ring"] }
# Pure-Rust special functions (regularized incomplete beta, erf) for the
# Student-t and Gaussian CDFs — no nalgebra/BLAS pull-in, matches scipy's
# cephes-based stdtr to ~1e-12 (verified by the parity harness).
puruspe = "0.4"
