[package]
name = "price_feed"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "price_feed"
path = "src/main.rs"

[dependencies]
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", features = ["ws", "clob", "rtds"] }
#polymarket_client_sdk_v2 = { git = "https://github.com/Polymarket/rs-clob-client-v2", features = ["rtds"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
async-nats = "0.49"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
