[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[lib]
name = "trader"
path = "src/lib.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
