[package]
name = "trader"
version = "0.1.0"
edition = "2024"

[lib]
name = "trader"
path = "src/lib.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "shadow"
path = "src/bin/shadow.rs"

[[bin]]
name = "api_probe"
path = "src/bin/api_probe.rs"

[[bin]]
name = "live"
path = "src/bin/live.rs"

[[bin]]
name = "telegram_probe"
path = "src/bin/telegram_probe.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
polymarket_client_sdk_v2 = { version = "0.6.0-canary.1", features = ["ws", "clob", "rtds"] }
async-trait = "0.1"
alloy = { version = "1", features = ["signer-local"] }
dotenvy = "0.15"
async-nats = "0.49"
rustls = { version = "0.23", features = ["ring"] }
